# atlab

./: LICENSE  README.md
config/: archlinux.cmake  levante.cmake  supermuc.cmake  ubuntu25.04.cmake  uhhpc-c.cmake  uhhpc.cmake
doc/: atlab-doc.bib  atlab-doc.tex  equations.tex  memory.tex  numerical.tex  postprocessing.tex  profiling.tex
examples/: Makefile  README.md
examples/Case01/: dns.out.ref  tlab.ini
examples/Case02/: dns.out.ref  tlab.ini
examples/Case03/: dns.out.ref  tlab.ini
examples/Case06/: dns.out.ref  tlab.ini
examples/Case07/: dns.out.ref  tlab.ini
examples/Case08/: dns.out.ref  tlab.ini
examples/Case08-3d/: dns.out.ref  tlab.ini
examples/Case09/: dns.out.ref  tlab.ini
examples/Case11/: dns.out.ref  tlab.ini
examples/Case12/: dns.out.ref  tlab.ini
examples/Case21/: dns.out.ref  tlab.ini
examples/Case25/: tlab.ini
examples/Case25-3d/: dns.out.ref  tlab.ini
examples/Case26/: dns.out.ref  tlab.ini
examples/Case27/: dns.out.ref  tlab.ini
examples/Case28/: tlab.ini
examples/Case29-3d/: dns.out.ref  tlab.ini
examples/Case31/: dns.out.ref  tlab.ini
examples/Case32/: dns.out.ref  tlab.ini
examples/Case32-3d/: dns.out.ref  tlab.ini
examples/Case41/: dns.out.ref  tlab.ini
examples/Case42/: dns.out.ref  tlab.ini
examples/Case43-3d/: dns.out.ref  tlab.ini
examples/Case44-3d/: dns.out.ref  tlab.ini
examples/Case45-3d/: dns.out.ref  tlab.ini
examples/Case51/: dns.out.ref  tlab.ini
examples/Case52/: dns.out.ref  tlab.ini
examples/Case61/: dns.out.ref  tlab.ini
examples/Case62/: dns.out.ref  tlab.ini
examples/Case63/: dns.out.ref  tlab.ini
examples/Case64/: dns.out.ref  tlab.ini
examples/Case64-3d/: dns.out.ref  tlab.ini
examples/Case65/: dns.out.ref  tlab.ini
examples/Case70/: dns.out.ref  tlab.ini
examples/Case71/: dns.out.ref
examples/Case71-3d/: dns.out.ref  tlab.ini
examples/Case72/: dns.out.ref
examples/Case73/: dns.out.ref
scripts/python/: ExtractPlanes.py  PlotGrid.py  PlotPdfs.py  PlotPlanes.py  README  atlab.py  fdm-eigen.py  fields2nc.py  grid2nc.py  planes2planes.py
scripts/templates/: dns.nqs.sh.dkrz.levante
src/: CMakeLists.txt
src/base/: io_ascii.f90  io_fields.f90  tlab_constants.f90  tlab_grid.f90  tlab_initialize_parameters.f90  tlab_memory.f90  tlab_mpi_procs.f90  tlab_mpi_transpose.f90  tlab_mpi_transpose_X.f90  tlab_mpi_vars.f90  tlab_transpose.f90  tlab_workflow.f90
src/finitedifferences/: CMakeLists.txt  fdm.f90  fdm_base.f90  fdm_com1_jacobian.f90  fdm_com2_jacobian.f90  fdm_comx_direct.f90  fdm_derivative.f90  fdm_derivative_1.f90  fdm_derivative_2.f90  fdm_derivative_Neumann.f90  fdm_derivative_X.f90  fdm_derivative_X1.f90  fdm_derivative_X2.f90  fdm_derivative_base.f90  fdm_derivative_burgers.f90  fdm_derivative_mpisplit.f90  fdm_integral.f90  fdm_integral_1.f90  fdm_integral_2.f90  fdm_integral_base.f90  fdm_interpolate.f90  fdm_matmul.f90  fdm_matmul_halo.f90
src/include/: tlab_error.h
src/mappings/: fi_fluctuation.f90  fi_gate.f90  fi_gradient.f90  fi_strain.f90  fi_vectorcalculus.f90  fi_vorticity.f90
src/operators/: CMakeLists.txt  opr_check.f90  opr_elliptic.f90  opr_fourier.f90  opr_odes.f90  opr_partial.f90
src/physics/: gravity.f90  largescaleforcing.f90  microphysics.f90  navierstokes.f90  nse_burgers.f90  nse_burgers_pervolume.f90  nse_pressure.f90  radiation.f90  rotation.f90  (+4 more)
src/valid/: CMakeLists.txt
src/valid/burgers/: vburgers.f90
src/valid/elliptic/: velliptic.f90
src/valid/fdm/: fdm-eigen.py  int-linsys.py  plot.py  vintegral.f90  vpartial.f90  vpartial3d.f90
src/valid/linear/: vlinear.f90  vlinsys.f90  vthomas3_parallel.f90  vthomas3_split.f90
src/valid/mpi/: vmpi_io.f90  vmpi_thomas3_scaling.f90
src/valid/thermo/: vthermo.f90
(+60 files in other folders)
